fix util class for ReviewDbStorageTest