@@ -16,7 +16,8 @@ public class Fixtures {
                 LocalDate.now(),
                 100L,
                 new MPA(1, "G"),
-                new ArrayList<>(List.of(new Genre(1, "Комедия"), new Genre(2, "Драма")))
+                new ArrayList<>(List.of(new Genre(1, "Комедия"), new Genre(2, "Драма"))),
+                Collections.emptyList()
         );
     }
 
@@ -28,7 +29,8 @@ public class Fixtures {
                 LocalDate.now().minusDays(1),
                 200L,
                 new MPA(2, "PG"),
-                new ArrayList<>(List.of(new Genre(3, "Мультфильм")))
+                new ArrayList<>(List.of(new Genre(3, "Мультфильм"))),
+                Collections.emptyList()
         );
     }
 
@@ -40,7 +42,8 @@ public class Fixtures {
                 LocalDate.now().minusDays(5),
                 201L,
                 new MPA(2, "PG"),
-                new ArrayList<>(List.of(new Genre(3, "Мультфильм")))
+                new ArrayList<>(List.of(new Genre(3, "Мультфильм"))),
+                Collections.emptyList()
         );
     }
 
